# TentaAI

./: .gitignore  README.md  index.md  main.py  pyproject.toml  template.txt  unusedCommands.py  work_log.txt
assetFiles/: .gitignore  bowser.py  config.py  discordLog.py  idList.py  invite.py  keep_alive.py  memberList.py  template.py  token.py
channelLogs/: ID.py
gamble/: 270293124444717056.py  416765196573605890.py  ID.py
